--- a/index.html
+++ b/index.html
@@ -7123,7 +7123,7 @@
                                 <div class="row icone">
                                     <div class="col-sm-6 send">
                                     <div id="send"></div>
-                                       
+                                        <!--    <div class="alert alert-success">Envio Realizado!</div> -->
                                     </div> 
                                     <div class="col-sm-6">
                                         <button type="submit" class="btn btn-success btn-lg">Enviar Mensagem</button>
