--- a/index.html
+++ b/index.html
@@ -7077,9 +7077,14 @@
         <div class="container">
             <div class="box">
                 <div class="row justify-content-center">
-                <div class="col-lg-12"> 
-                    <div class="page-header"><h1>Localização</h1> <hr> </div>
+                  <div class="col-lg-12"> 
+                      <div class="page-header"><h1>Localização</h1> <hr> </div>
+                  </div>
                 </div>
+                <div class="row">
+                  <div class="col-lg-12">
+                    <div class="alert alert-success" role="alert">Veja onde estamos!</div>
+                  </div>
                 </div>
                 <div class="row">
                     <div class="col-lg-12">
@@ -7098,6 +7103,11 @@
                   <div class="row justify-content-center">
                       <div class="col-lg-12"> 
                         <div class="page-header"><h1>Contato</h1> <hr> </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-lg-12">
+                        <div class="alert alert-success" role="alert">Preecha o formulário abaixo para entrar em contato conosco!</div>
                       </div>
                     </div>
                     <div class="row contato">
