--- a/index.html
+++ b/index.html
@@ -7133,11 +7133,11 @@
                                         </div>
                                     </div>
                                
-                                    <div class="col-lg-6 icone">
+                                    <div class="col-lg-6">
                                         <textarea name="mensagem" id="mensagem" class="form-control form-control-lg" rows="5" placeholder="Envie sua Mensagem! *" required></textarea>
                                     </div>
                                 </div>
-                                <div class="row icone">
+                                <div class="row">
                                     <div class="col-lg-6 send">
                                     <div id="send"></div>
                                        <!-- teste -->
