--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <div class="container">
               <div class="box row justify-content-center">
                 <div class="col-lg-12"> 
-                  <div class="page-header"><h1>Pijamas Femininos Adulto</h1> <hr> </div>
+                  <div class="page-header"><h1>Feminino Adulto</h1> <hr> </div>
                 </div>
                 <div class="card-deck">
                   <div class="card">
@@ -672,7 +672,7 @@
             <div class="container">
               <div class="box row justify-content-center">
                 <div class="col-lg-12"> 
-                  <div class="page-header"><h1>Pijamas Femininos Infantil</h1> <hr> </div>
+                  <div class="page-header"><h1>Feminino Infantil</h1> <hr> </div>
                 </div>
                 <div class="card-deck">
                   <div class="card">
@@ -4344,7 +4344,7 @@
                       <div class="card-body">
                         <h5 class="card-title">Body de Renda</h5>
                         <p class="card-text">Tam. P M G GG</p>
-                        <p class="card-text">R$ 38,00</p>
+                        <p class="card-text">R$ 39,90</p>
                         <!-- <a href="#" class="btn btn-primary">Visitar</a> -->
                         <!-- Botão para acionar modal -->
                       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalExemplo109">
@@ -4517,7 +4517,7 @@
                       <div class="card-body">
                         <h5 class="card-title">Body de Renda</h5>
                         <p class="card-text">Tam. P M G GG</p>
-                        <p class="card-text">R$ 38,00</p>
+                        <p class="card-text">R$ 39,90</p>
                         <!-- <a href="#" class="btn btn-primary">Visitar</a> -->
                         <!-- Botão para acionar modal -->
                       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalExemplo113">
