--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <div class="icone">
             <a href="https://www.facebook.com/Sensual-modas-intimas-1070608006291846"><i class="fab fa-facebook fa-2x"></i></a>
           </div>
-          <div class="icone">
+          <div class="icone ico">
             <a href="https://www.instagram.com/sensual.moda.intima"><i class="fab fa-instagram fa-2x"></i></a>
           </div>
         </a>
@@ -5081,7 +5081,7 @@
                       <div class="card-body">
                         <h5 class="card-title">Fantasia de Enfermeira</h5>
                         <p class="card-text">Tam. Único</p>
-                        <p class="card-text">R$ 31,00</p>
+                        <p class="card-text">R$ 42,00</p>
                         <!-- <a href="#" class="btn btn-primary">+ Detalhes</a> -->
             
                         <!-- Botão para acionar modal -->
@@ -5125,7 +5125,7 @@
                       <div class="card-body">
                         <h5 class="card-title">Fantasia de Policia</h5>
                         <p class="card-text">Tam. Único</p>
-                        <p class="card-text">R$ 31,00</p>
+                        <p class="card-text">R$ 42,00</p>
                         <!-- <a href="#" class="btn btn-primary">Visitar</a> -->
                         <!-- Botão para acionar modal -->
                       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalExemplo103">
@@ -5167,7 +5167,7 @@
                       <div class="card-body">
                         <h5 class="card-title">Fantasia de Bombeira</h5>
                         <p class="card-text">Tam. Único</p>
-                        <p class="card-text">R$ 31,00</p>
+                        <p class="card-text">R$ 42,00</p>
                         <!-- <a href="#" class="btn btn-primary">Visitar</a> -->
                         <!-- Botão para acionar modal -->
                       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalExemplo104">
@@ -5209,7 +5209,7 @@
                       <div class="card-body">
                         <h5 class="card-title">Fantasia de Enfermeira</h5>
                         <p class="card-text">Tam. Único</p>
-                        <p class="card-text">R$ 31,00</p>
+                        <p class="card-text">R$ 42,00</p>
                         <!-- <a href="#" class="btn btn-primary">Visitar</a> -->
                         <!-- Botão para acionar modal -->
                       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalExemplo105">
