--- a/index.html
+++ b/index.html
@@ -8888,7 +8888,7 @@
                                     <div class="col-lg-6 send">
                                       <div id="send"></div>
                                     </div> 
-                                    <div class="col-lg-6">
+                                    <div class="col-lg-6 btn">
                                         <button type="submit" class="btn btn-success btn-lg">Enviar Mensagem</button>
                                     </div>
                                 </div>
