--- a/index.html
+++ b/index.html
@@ -2831,7 +2831,7 @@
                       <img class="card-img-top" src="img/calcinha/c_77.jpg" alt="Imagem de capa do card">
                       <div class="card-body">
                         <h5 class="card-title">Calcinha de Renda</h5>
-                        <p class="card-text">Tam. P M G GG</p>
+                        <p class="card-text">Tam. Único</p>
                         <p class="card-text">R$ 9,90</p>
                         <!-- <a href="#" class="btn btn-primary">Visitar</a> -->
                         <!-- Botão para acionar modal -->
@@ -2893,7 +2893,7 @@
                                 <div class="container-fluid">
                                   <div class="row">
                                     <div class="col-md-6">
-                                      <img class="card-img-top" src="img/calcinha/c_78.jpg" alt="Imagem de capa do card">  
+                                      <img class="card-img-top" src="img/calcinha/c_74.jpg" alt="Imagem de capa do card">  
                                     </div>
                                     <div class="col-md-6">
                                       <p>Descrição: Calcinha de Renda Fio (90% de Poliamida e 10% de Elastano).</p>
@@ -3219,7 +3219,7 @@
                       <img class="card-img-top" src="img/calcinha/c_90.jpg" alt="Imagem de capa do card">
                       <div class="card-body">
                         <h5 class="card-title">Calcinha de Renda</h5>
-                        <p class="card-text">Tam. P M G GG</p>
+                        <p class="card-text">Tam. M</p>
                         <p class="card-text">R$ 7,90</p>
                         <!-- <a href="#" class="btn btn-primary">Visitar</a> -->
                         <!-- Botão para acionar modal -->
@@ -3705,7 +3705,7 @@
                     </button>
                       
                       <!-- Modal -->
-                      <div class="modal fade" id="modalExemplo49" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                      <div class="modal fade" id="modalExemplo73" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog modal-lg" role="document">
                           <div class="modal-content">
                             <div class="modal-header">
