--- a/index.html
+++ b/index.html
@@ -7526,7 +7526,7 @@
             <div class="container">
               <div class="box row justify-content-center">
                 <div class="col-lg-12"> 
-                  <div class="page-header"><h1>Linha SexShop</h1> <hr> </div>
+                  <div class="page-header"><h1>SexShop</h1> <hr> </div>
                 </div>
                 <div class="card-deck">
                   <div class="card">
@@ -9785,8 +9785,8 @@
                   
                                   <div class="col-sm-3">
                                       <i class="fab fa-whatsapp fa-2x"></i>
-                                      <p><a href="tel:12988383481">(12) 98838-3481</a> 
-                                          <a href="tel:12988118035">(12) 98811-8035</a></p>
+                                      <p><a href="tel:12988118035">(12) 98811-8035</a> 
+                                          <a href="tel:12988383481">(12) 98838-3481</a></p>
                                   </div>
                                   <div class="col-sm-3">
                                         <i class="fab fa-facebook-square fa-2x"></i>
