--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Baby Doll Alça Estampado</h5>
                       <p class="card-text">Tam. P M G GG</p>
-                      <p class="card-text">R$ 29,00</p>
+                      <p class="card-text">R$ 30,00</p>
                       <!-- <a href="#" class="btn btn-primary">+ Detalhes</a> -->
           
                       <!-- Botão para acionar modal -->
@@ -323,7 +323,7 @@
                       <div class="card-body">
                         <h5 class="card-title">Pescador Regata Estampado</h5>
                         <p class="card-text">Tam. P M G GG</p>
-                        <p class="card-text">R$ 37,90</p>
+                        <p class="card-text">R$ 39,90</p>
                         <!-- <a href="#" class="btn btn-primary">+ Detalhes</a> -->
             
                         <!-- Botão para acionar modal -->
@@ -8638,9 +8638,9 @@
                     <div class="card">
                       <img class="card-img-top" src="img/sexshop/egg.png" alt="Imagem de capa do card">
                       <div class="card-body">
-                        <h5 class="card-title">Egg Steper</h5>
+                        <h5 class="card-title">Egg Stepper</h5>
                         <!-- <p class="card-text">Tam. P M G GG</p> -->
-                        <p class="card-text">R$ 39,90</p>
+                        <p class="card-text">R$ 25,00</p>
                         <!-- <a href="#" class="btn btn-primary">Visitar</a> -->
                         <!-- Botão para acionar modal -->
                       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalExemplo127">
