--- a/index.html
+++ b/index.html
@@ -1071,7 +1071,7 @@
                   <div class="card">
                     <img class="card-img-top" src="img/pijama/PMI_11.png" alt="Imagem de capa do card">
                     <div class="card-body">
-                      <h5 class="card-title">Baby Doll Alçça</h5>
+                      <h5 class="card-title">Baby Doll Alça</h5>
                       <p class="card-text">Tam. P M G GG</p>
                       <p class="card-text">R$ 24,00</p>
                       <!-- <a href="#" class="btn btn-primary">Visitar</a> -->
@@ -1153,7 +1153,7 @@
                     </div>
                   </div>
                   <div class="card">
-                    <img class="card-img-top" src="img/pijama/PMI_05.jpg" alt="Imagem de capa do card">
+                    <img class="card-img-top" src="img/pijama/PMI_07.jpg" alt="Imagem de capa do card">
                     <div class="card-body">
                       <h5 class="card-title">Pescador Estampado</h5>
                       <p class="card-text">Tam. P M G GG</p>
@@ -1176,7 +1176,7 @@
                                 <div class="container-fluid">
                                   <div class="row">
                                     <div class="col-md-6">
-                                      <img class="card-img-top" src="img/pijama/PMI_05.jpg" alt="Imagem de capa do card">  
+                                      <img class="card-img-top" src="img/pijama/PMI_07.jpg" alt="Imagem de capa do card">  
                                     </div>
                                     <div class="col-md-6">
                                       <p>Descrição: Pijama de malha PV (Poliester com Viscose).</p>
