--- a/index.html
+++ b/index.html
@@ -9956,24 +9956,26 @@
                                 </div>
                             </form> 
                             <hr>
+                            <br>
                             <div class="container">
                               <div class="row text-center">
                                   <div class="col-sm-3">
-                                      <i class="fas fa-phone-square fa-2x"></i>
+                                      <img src="img/icone/phone.png" alt="logo da empresa" class="mx-auto d-block">
                                       <p><a href="tel:1231576205">(12) 3157-6205 </a></p>
                                   </div>
                   
                                   <div class="col-sm-3">
-                                      <i class="fab fa-whatsapp fa-2x"></i>
+                                    <img src="img/icone/WhatsApp_i.png" alt="logo da empresa" class="mx-auto d-block">  
                                       <p><a href="tel:12988118035">(12) 98811-8035</a> 
                                           <a href="tel:12988383481">(12) 98838-3481</a></p>
                                   </div>
                                   <div class="col-sm-3">
-                                        <i class="fab fa-facebook-square fa-2x"></i>
+                                    <img src="img/icone/Facebook_i.png" alt="logo da empresa" class="mx-auto d-block">  
                                       <p><a href="https://www.facebook.com/Sensual-modas-intimas-1070608006291846">Sensual Modas Intimas</a></p>
                                   </div>
                                   <div class="col-sm-3">
-                                        <i class="fab fa-instagram fa-2x"></i>
+                                        <!--<i class="fab fa-instagram fa-2x"></i>-->
+                                        <img src="img/icone/Instagram_i.png" alt="logo da empresa" class="mx-auto d-block">
                                       <p><a href="https://www.instagram.com/sensual.moda.intima">Sensual Moda Intima</a></p>
                                   </div>
                               </div> 
