--- a/index.html
+++ b/index.html
@@ -33,17 +33,14 @@
         </a>
         <div class="icone">
           <a href="https://www.facebook.com/Sensual-modas-intimas-1070608006291846">
-            <img src="img/facebook_icon.png" alt="logo da empresa" class="image-responsive image">
+            <img src="img/icone/Facebook_i.png" alt="logo da empresa" class="image-responsive image">
           </a>
         </div>
         <div class="icone">
           <a href="https://www.instagram.com/sensual.moda.intima">
-            <img src="img/Instagram_icon.png" alt="logo da empresa" class="image-responsive image">
+            <img src="img/icone/Instagram_i.png" alt="logo da empresa" class="image-responsive image">
           </a>
         </div>
-        <!--<div class="icone ico">
-          <a href="https://www.instagram.com/sensual.moda.intima"><i class="fab fa-instagram fa-2x"></i></a>
-        </div>-->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -9974,7 +9971,6 @@
                                       <p><a href="https://www.facebook.com/Sensual-modas-intimas-1070608006291846">Sensual Modas Intimas</a></p>
                                   </div>
                                   <div class="col-sm-3">
-                                        <!--<i class="fab fa-instagram fa-2x"></i>-->
                                         <img src="img/icone/Instagram_i.png" alt="logo da empresa" class="mx-auto d-block">
                                       <p><a href="https://www.instagram.com/sensual.moda.intima">Sensual Moda Intima</a></p>
                                   </div>
