--- a/index.html
+++ b/index.html
@@ -5046,7 +5046,7 @@
                                 <div class="container-fluid">
                                   <div class="row">
                                     <div class="col-md-6">
-                                      <img class="card-img-top" src="img/camisola/c_07.jpg" alt="Imagem de capa do card">  
+                                      <img class="card-img-top" src="img/conjunto/c_07.jpg" alt="Imagem de capa do card">  
                                     </div>
                                     <div class="col-md-6">
                                       <p>Descrição: Conjunto com Bojo de Renda (Poliester com Viscose).</p>
