--- a/index.html
+++ b/index.html
@@ -4272,11 +4272,11 @@
                       </div>
                     </div>
                     <div class="card">
-                      <img class="card-img-top" src="img/soutien/s_09.png" alt="Imagem de capa do card">
+                      <img class="card-img-top" src="img/soutien/1007.jpg" alt="Imagem de capa do card">
                       <div class="card-body">
-                        <h5 class="card-title">Soutien Bojo com Silicone nas Costa</h5>
+                        <h5 class="card-title">Soutien Bojo com Renda</h5>
                         <p class="card-text">Tam. P M G GG</p>
-                        <p class="card-text">R$ 31,00</p>
+                        <p class="card-text">R$ 25,90</p>
                         <!-- <a href="#" class="btn btn-primary">Visitar</a> -->
                         <!-- Botão para acionar modal -->
                       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalExemplo1058">
@@ -4288,17 +4288,17 @@
                         <div class="modal-dialog modal-lg" role="document">
                           <div class="modal-content">
                             <div class="modal-header">
-                              <h5 class="modal-title" id="exampleModalLabel">Soutien Bojo com Silicone nas Costa</h5>
+                              <h5 class="modal-title" id="exampleModalLabel">Soutien Bojo com Renda</h5>
                               
                             </div>
                             <div class="modal-body">
                                 <div class="container-fluid">
                                   <div class="row">
                                     <div class="col-md-6">
-                                      <img class="card-img-top" src="img/soutien/s_09.png" alt="Imagem de capa do card">  
+                                      <img class="card-img-top" src="img/soutien/1007.jpg" alt="Imagem de capa do card">  
                                     </div>
                                     <div class="col-md-6">
-                                      <p>Descrição: Soutien Bojo com Silicone nas Costa (92% de Poliamida e 08% de Elastano).</p>
+                                      <p>Descrição: Soutien Bojo com Renda (92% de Poliamida e 08% de Elastano).</p>
                                       <p>Estampas: Variadas.</p>
                                     </div>
                                   </div>
